--- a/hackathon.org
+++ b/hackathon.org
@@ -5,16 +5,19 @@
 * Hackathon Tasks
 * elisp setup-hackathon
 #+BEGIN_SRC elisp
-  (defun setup-hackathon ()
-    (interactive)
-    (set-register ?a "http://missoulacivichackathon.org")
-    (set-register ?s "http://missoulacivichackathon.org/#!/sponsors")
-    (set-register ?p "http://missoulacivichackathon.org/#!/press-release")
-    (set-register ?t "https://www.eventbrite.com/e/missoula-civic-hackathon-2016-tickets-21898542129")
-    (set-register ?c "https://github.com/Blue-Sky-Skunkworks/hackathon")
-    (set-register ?w "https://github.com/Blue-Sky-Skunkworks/missoula-civic-hackathon-notes/wiki/Projects")
-    (set-register ?m "—")
-    (set-register ?n "–")
-    (set-register ?' "“”"))
+    (defun setup-hackathon ()
+      (interactive)
+      (set-register ?a "http://missoulacivichackathon.org")
+      (set-register ?s "http://missoulacivichackathon.org/#!/sponsors")
+      (set-register ?p "http://missoulacivichackathon.org/#!/press-release")
+      (set-register ?t "https://www.eventbrite.com/e/missoula-civic-hackathon-2016-tickets-21898542129")
+      (set-register ?c "https://github.com/Blue-Sky-Skunkworks/hackathon")
+      (set-register ?w "https://github.com/Blue-Sky-Skunkworks/missoula-civic-hackathon-notes/wiki/Projects")
+      (set-register ?m "—")
+      (set-register ?n "–")
+      (set-register ?' "“”")
+
+      (yas-load-directory "~/p/hackathon/missoula-civic-hackathon-notes.wiki/snippets")
+      )
 #+END_SRC
 
